k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
  namespace: simple-app-ns
  labels:
    app: simple-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
        - name: simple-app
          imagePullPolicy: Never
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "200m"
              memory: "16Mi"
            limits:
              cpu: "300m"
              memory: "32Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
