k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
  namespace: simple-app-ns
spec:
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
