k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
  namespace: simple-app-ns
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-app-service
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: simple-app-service
                port:
                  number: 80
